Virus de front de Luis, tu papeleo

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,6 @@
-
-<div class="main-image">
-</div>
-<div class="text-container">
-<h1>Herramienta para hacer tu papeleo</h1>
-</div>
-
+<mat-card>
+    <mat-card-title>¿Olvidaste Hacer tu Papeleo Anoche?</mat-card-title>
+    <mat-card-subtitle>Esperamos que no... usa esta aplicación para reportar tus horas de trabajo</mat-card-subtitle>
+    <img mat-card-avatar mat-card-lg-image src="/assets/1.jpg">
+    <mat-card-content>Con "Haz Tu Papeleo" registra de forma agil tus horas de trabajo, crea proyectos, haz seguimiento de tus compromisos y obten reportes de tu grupo de trabajo. ¡Registrate o inicia sesión!</mat-card-content>
+</mat-card>
