--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,20 +1,24 @@
-.main-image{
-	position: absolute;
-	margin-left:0px;
-	margin-top:8vh;
-	top:0px;
-	left: 0px;
-	height: 92vh;
-	width: 45vw;
-	background-image: url(/assets/1.jpg);
-	background-size: cover;
+mat-card{
+	margin-top: 15vh;
 }
-.text-container{
-	position: absolute;
-	margin-left:45vw;
-	margin-top:8vh;
-	top:0px;
-	left: 0px;
-	height: 92vh;
-	width: 55vw;
+
+mat-card-title{
+	text-align: center;
+}
+
+mat-card-subtitle{
+	text-align: center;
+	padding-left: 100px;
+	padding-right: 100px;
+	display: block;
+}
+
+img{
+	margin-top: 30px;
+	margin-bottom: 30px;
+	margin-left: auto;
+	margin-right: auto;
+	display: block;
+	height: 200px;
+	width: 200px;
 }
