--- a/src/app/toolbar/toolbar.component.css
+++ b/src/app/toolbar/toolbar.component.css
@@ -17,6 +17,24 @@ span{
 	right: 10px;
 }
 
+.avatar-selector{
+	width: 50px;
+	height: 50px;
+	border-style: solid;
+	border-width: 3px;
+	border-color: darkgrey;
+}
+
+.avatar-selector-selected{
+	width: 12px;
+	height: 12px;
+	border-style: solid;
+	border-width: 3px;
+	border-color: darkgrey;
+}
+
+
+
 
 
 /* .my-bar{
